# ruff

./: Cargo.toml
crates/ruff_codes/: Cargo.toml
crates/ruff_codes/src/: codes.rs  lib.rs  registry.rs  rule_redirects.rs  rule_selector.rs  rule_set.rs  upstream_categories.rs
crates/ruff_codes/src/rules/: mod.rs
crates/ruff_codes/src/rules/airflow/: dag_schedule_argument.rs  mod.rs  moved_to_provider_in_3.rs  removal_in_3.rs  suggested_to_move_to_provider_in_3.rs  suggested_to_update_3_0.rs  task_variable_name.rs
crates/ruff_codes/src/rules/eradicate/: commented_out_code.rs  mod.rs
crates/ruff_codes/src/rules/fastapi/: fastapi_non_annotated_dependency.rs  fastapi_redundant_response_model.rs  fastapi_unused_path_parameter.rs  mod.rs
crates/ruff_codes/src/rules/flake8_2020/: compare.rs  mod.rs  name_or_attribute.rs  subscript.rs
crates/ruff_codes/src/rules/flake8_annotations/: definition.rs  mod.rs
crates/ruff_codes/src/rules/flake8_async/: async_busy_wait.rs  async_function_with_timeout.rs  async_zero_sleep.rs  blocking_http_call.rs  blocking_open_call.rs  blocking_process_invocation.rs  blocking_sleep.rs  cancel_scope_no_checkpoint.rs  helpers.rs  long_sleep_not_forever.rs  mod.rs  sync_call.rs
crates/ruff_codes/src/rules/flake8_bandit/: assert_used.rs  bad_file_permissions.rs  common.rs  django_extra.rs  django_raw_sql.rs  exec_used.rs  flask_debug_true.rs  hardcoded_bind_all_interfaces.rs  hardcoded_password_default.rs  hardcoded_password_func_arg.rs  hardcoded_password_string.rs  hardcoded_sql_expression.rs  hardcoded_tmp_directory.rs  hashlib_insecure_hash_functions.rs  jinja2_autoescape_false.rs  logging_config_insecure_listen.rs  mako_templates.rs  mod.rs  paramiko_calls.rs  request_with_no_cert_validation.rs  request_without_timeout.rs  shell_injection.rs  snmp_insecure_version.rs  snmp_weak_cryptography.rs  (+12 more)
crates/ruff_codes/src/settings/: types.rs
crates/ruff_linter/: Cargo.toml
crates/ruff_linter/src/: fs.rs  lib.rs  linter.rs  pyproject_toml.rs  test.rs
crates/ruff_linter/src/checkers/: filesystem.rs  imports.rs  logical_lines.rs  noqa.rs  physical_lines.rs  tokens.rs
crates/ruff_linter_checkers/: Cargo.toml
crates/ruff_linter_checkers/src/: banned_import_policies.rs  lib.rs  logical_lines.rs  shadowed.rs  typing.rs
crates/ruff_linter_checkers/src/ast/: deferred.rs  mod.rs
crates/ruff_linter_directives/: Cargo.toml
crates/ruff_linter_directives/src/: lib.rs
crates/ruff_linter_fix/: Cargo.toml
crates/ruff_linter_fix/src/: codemods.rs  edits.rs  lib.rs
crates/ruff_linter_fix/src/cst/: helpers.rs  matchers.rs
crates/ruff_linter_fix/src/importer/: mod.rs
crates/ruff_linter_message/: Cargo.toml
crates/ruff_linter_message/src/: azure.rs  diff.rs  github.rs  gitlab.rs  grouped.rs  json.rs  json_lines.rs  junit.rs  lib.rs  linter.rs  pylint.rs  rdjson.rs  sarif.rs  text.rs
crates/ruff_linter_noqa/: Cargo.toml
crates/ruff_linter_noqa/src/: lib.rs
crates/ruff_linter_settings/: Cargo.toml
crates/ruff_linter_settings/src/: fix_safety_table.rs  lib.rs  preview.rs  rule_table.rs
crates/ruff_linter_settings/src/rules/: flake8_annotations.rs  flake8_bandit.rs  flake8_boolean_trap.rs  flake8_bugbear.rs  flake8_builtins.rs  flake8_comprehensions.rs  flake8_copyright.rs  flake8_errmsg.rs  flake8_gettext.rs  flake8_implicit_str_concat.rs  flake8_import_conventions.rs  flake8_pytest_style.rs  flake8_quotes.rs  flake8_self.rs  flake8_tidy_imports.rs  flake8_type_checking.rs  flake8_unused_arguments.rs  isort.rs  mccabe.rs  mod.rs  pep8_naming.rs  pycodestyle.rs  pydoclint.rs  pydocstyle.rs  pyflakes.rs  pylint.rs  pyupgrade.rs  ruff.rs
crates/ruff_linter_test/: Cargo.toml
crates/ruff_linter_test/src/: lib.rs
crates/ruff_rule_eradicate/: Cargo.toml
crates/ruff_rule_eradicate/src/: detection.rs  lib.rs
crates/ruff_rule_eradicate/src/rules/: commented_out_code.rs  mod.rs
crates/ruff_rule_flake8_commas/: Cargo.toml
crates/ruff_rule_flake8_commas/src/: lib.rs
crates/ruff_rule_flake8_commas/src/rules/: mod.rs  trailing_commas.rs
crates/ruff_rule_flake8_executable/: Cargo.toml
crates/ruff_rule_flake8_executable/src/: lib.rs
crates/ruff_rule_flake8_executable/src/rules/: mod.rs  shebang_leading_whitespace.rs  shebang_missing_executable_file.rs  shebang_missing_python.rs  shebang_not_executable.rs  shebang_not_first_line.rs
crates/ruff_rule_flake8_tidy_imports/: Cargo.toml
crates/ruff_rule_flake8_tidy_imports/src/: lib.rs
crates/ruff_rule_flake8_tidy_imports/src/rules/: banned_api.rs  banned_module_level_imports.rs  mod.rs  relative_imports.rs
crates/ruff_rule_isort/: Cargo.toml
crates/ruff_rule_isort/src/: annotate.rs  block.rs  comments.rs  format.rs  helpers.rs  lib.rs  normalize.rs  order.rs  sorting.rs  split.rs
crates/ruff_rule_isort/src/rules/: add_required_imports.rs  mod.rs  organize_imports.rs
crates/ruff_rule_ruff/: Cargo.toml
crates/ruff_rule_ruff/src/: lib.rs
crates/ruff_rule_ruff/src/rules/: ambiguous_unicode_character.rs  assert_with_print_message.rs  assignment_in_assert.rs  asyncio_dangling_task.rs  class_with_mixed_type_vars.rs  collection_literal_concatenation.rs  confusables.rs  dataclass_enum.rs  decimal_from_float_literal.rs  default_factory_kwarg.rs  explicit_f_string_type_conversion.rs  falsy_dict_get_fallback.rs  function_call_in_dataclass_default.rs  if_key_in_dict_del.rs  implicit_classvar_in_dataclass.rs  implicit_optional.rs  in_empty_collection.rs  incorrectly_parenthesized_tuple_in_subscript.rs  indented_form_feed.rs  invalid_assert_message_literal_argument.rs  invalid_formatter_suppression_comment.rs  invalid_index_type.rs  invalid_pyproject_toml.rs  invalid_rule_code.rs  map_int_version_parsing.rs  missing_fstring_syntax.rs  mod.rs  mutable_class_default.rs  mutable_dataclass_default.rs  mutable_fromkeys_value.rs  needless_else.rs  never_union.rs  none_not_at_end_of_union.rs  parenthesize_chained_operators.rs  post_init_default.rs  pytest_raises_ambiguous_pattern.rs  quadratic_list_summation.rs  redirected_noqa.rs  redundant_bool_literal.rs  sequence_sorting.rs  (+21 more)
(+1517 files in other folders)
