[package]
name = "ruff_linter_message"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
ruff_db = { workspace = true }
ruff_diagnostics = { workspace = true }
ruff_notebook = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
ruff_annotate_snippets = { workspace = true}
ruff_linter_commons = { workspace = true }
ruff_codes = { workspace = true }

colored = { workspace = true }
similar = { workspace = true }
rustc-hash = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-junit = { workspace = true }
bitflags = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }