[package]
name = "ruff_linter_noqa"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
ruff_diagnostics = { workspace = true }
ruff_python_trivia = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
ruff_codes = { workspace = true }
ruff_linter_commons = { workspace = true }
ruff_linter_message = { workspace = true }

anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }

[dev-dependencies]
insta = { workspace = true }